// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PluginBody > Snapshot > should match snapshot for content state 1`] = `
<div
  class="p-6"
  style="min-height: 400px;"
>
  <div>
    Test Content
  </div>
</div>
`;

exports[`PluginBody > Snapshot > should match snapshot for error state with retry 1`] = `
<div
  class="flex flex-col items-center justify-center p-12"
  style="min-height: 400px;"
>
  <div
    class="
            rounded-full p-3 mb-4
            bg-red-50
          "
  >
    <div
      class="
              w-8 h-8
              text-red-600
            "
      data-testid="alert-icon"
    >
      Alert
    </div>
  </div>
  <h3
    class="
            text-lg font-semibold mb-2
            text-gray-900
          "
  >
    Plugin Error
  </h3>
  <p
    class="
            text-sm text-center max-w-md mb-4
            text-gray-600
          "
  >
    Error
  </p>
  <button
    class="
              flex items-center space-x-2 px-4 py-2 rounded-md
              text-sm font-medium transition-colors
              bg-gray-100 hover:bg-gray-200 text-gray-900
            "
  >
    <div
      class="w-4 h-4"
      data-testid="refresh-icon"
    >
      Refresh
    </div>
    <span>
      Retry
    </span>
  </button>
</div>
`;

exports[`PluginBody > Snapshot > should match snapshot for error state without retry 1`] = `
<div
  class="flex flex-col items-center justify-center p-12"
  style="min-height: 400px;"
>
  <div
    class="
            rounded-full p-3 mb-4
            bg-red-50
          "
  >
    <div
      class="
              w-8 h-8
              text-red-600
            "
      data-testid="alert-icon"
    >
      Alert
    </div>
  </div>
  <h3
    class="
            text-lg font-semibold mb-2
            text-gray-900
          "
  >
    Plugin Error
  </h3>
  <p
    class="
            text-sm text-center max-w-md mb-4
            text-gray-600
          "
  >
    Error
  </p>
</div>
`;

exports[`PluginBody > Snapshot > should match snapshot for loading state 1`] = `
<div
  class="flex flex-col items-center justify-center p-12"
  style="min-height: 400px;"
>
  <div
    class="
            w-8 h-8 animate-spin
            text-gray-600
          "
    data-testid="loader-icon"
  >
    Loading
  </div>
  <p
    class="
            mt-4 text-sm
            text-gray-600
          "
  >
    Loading plugin...
  </p>
</div>
`;
